--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -121,12 +121,19 @@ header h2 {
 }
 
 .progress::-webkit-slider-thumb {
+    cursor: pointer;
     -webkit-appearance: none;
     appearance: none;
-    width: 12px;
-    height: 6px;
-    background-color: var(--primary-color);
-    cursor: pointer;
+    height: 24px;
+    width: 24px;
+    margin-top: -8px;
+    margin-bottom: -8px;
+    background-color: #ec1f55;
+    border-radius: 50%;
+    border: 4px solid rgb(255, 255, 255);
+    box-shadow: 2px 8px 13px -3px rgba(116, 114, 114, 0.75);
+    -webkit-box-shadow: 2px 8px 13px -3px rgba(116, 114, 114, 0.75);
+    -moz-box-shadow: 2px 8px 13px -3px rgba(116, 114, 114, 0.75);
 }
 
 /* PLAYLIST */
